tests/syntax_error/chained_eq.jou
import "stdlib/io.jou"

def main() -> int:
    printf("%d\n", 1 == 2 == 3)  # Error: comparisons cannot be chained
